my-test/testsuite_scan/ir/SingleSource/UnitTests/Vector/LASX/lasx-xvmaddwev-1.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvmaddwev-1.c:7:3: error: use of undeclared identifier '__m256i'
    7 |   __m256i __m256i_out, __m256i_result;
      |   ^~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvmaddwev-1.c:8:3: error: use of undeclared identifier '__m256'
    8 |   __m256 __m256_out, __m256_result;
      |   ^~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvmaddwev-1.c:9:3: error: use of undeclared identifier '__m256d'
    9 |   __m256d __m256d_out, __m256d_result;
      |   ^~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvmaddwev-1.c:10:3: error: use of undeclared identifier 'v4u64'
   10 |   v4u64 v4u64_op0, v4u64_op1, v4u64_op2;
      |   ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvmaddwev-1.c:11:3: error: use of undeclared identifier 'v8i32'
   11 |   v8i32 v8i32_op0, v8i32_op1, v8i32_op2;
      |   ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvmaddwev-1.c:19:3: error: use of undeclared identifier 'v4u64_op0'
   19 |   v4u64_op0 = (v4u64){0xffff000100000000, 0x7fefffffffffffff,
      |   ^~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvmaddwev-1.c:19:16: error: use of undeclared identifier 'v4u64'
   19 |   v4u64_op0 = (v4u64){0xffff000100000000, 0x7fefffffffffffff,
      |                ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvmaddwev-1.c:21:3: error: use of undeclared identifier 'v4u64_op1'
   21 |   v4u64_op1 = (v4u64){0x0000000000000000, 0x0000000000000000,
      |   ^~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvmaddwev-1.c:21:16: error: use of undeclared identifier 'v4u64'
   21 |   v4u64_op1 = (v4u64){0x0000000000000000, 0x0000000000000000,
      |                ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvmaddwev-1.c:23:3: error: use of undeclared identifier 'v4u64_op2'
   23 |   v4u64_op2 = (v4u64){0x0000000000000000, 0x0000000000000000,
      |   ^~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvmaddwev-1.c:23:16: error: use of undeclared identifier 'v4u64'
   23 |   v4u64_op2 = (v4u64){0x0000000000000000, 0x0000000000000000,
      |                ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvmaddwev-1.c:25:3: error: use of undeclared identifier '__m256i_result'
   25 |   __m256i_result = (__m256i){0xffff000100000000, 0x7fefffffffffffff,
      |   ^~~~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvmaddwev-1.c:25:21: error: use of undeclared identifier '__m256i'
   25 |   __m256i_result = (__m256i){0xffff000100000000, 0x7fefffffffffffff,
      |                     ^~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvmaddwev-1.c:27:3: error: use of undeclared identifier '__m256i_out'
   27 |   __m256i_out = __lasx_xvmaddwev_h_b((__m256)v4u64_op0, (__m256)v4u64_op1, (__m256)v4u64_op2);
      |   ^~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvmaddwev-1.c:27:17: error: call to undeclared function '__lasx_xvmaddwev_h_b'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   27 |   __m256i_out = __lasx_xvmaddwev_h_b((__m256)v4u64_op0, (__m256)v4u64_op1, (__m256)v4u64_op2);
      |                 ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvmaddwev-1.c:27:39: error: use of undeclared identifier '__m256'
   27 |   __m256i_out = __lasx_xvmaddwev_h_b((__m256)v4u64_op0, (__m256)v4u64_op1, (__m256)v4u64_op2);
      |                                       ^~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvmaddwev-1.c:27:58: error: use of undeclared identifier '__m256'
   27 |   __m256i_out = __lasx_xvmaddwev_h_b((__m256)v4u64_op0, (__m256)v4u64_op1, (__m256)v4u64_op2);
      |                                                          ^~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvmaddwev-1.c:27:77: error: use of undeclared identifier '__m256'
   27 |   __m256i_out = __lasx_xvmaddwev_h_b((__m256)v4u64_op0, (__m256)v4u64_op1, (__m256)v4u64_op2);
      |                                                                             ^~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvmaddwev-1.c:28:19: error: use of undeclared identifier '__m256i_result'
   28 |   check_lasx_out(&__m256i_result, &__m256i_out, sizeof(__m256i_out), __FILE__, __LINE__);
      |                   ^~~~~~~~~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
